--- a/zeraki/public/index.html
+++ b/zeraki/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover the latest trends in fashion at Zeraki. Shop our collection
+of stylish clothing, shoes, and accessories for men and women. Enjoy fast
+shipping and easy returns.
+"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
